--- a/GroupA_HM2.Rmd
+++ b/GroupA_HM2.Rmd
@@ -63,7 +63,7 @@ Being the number of voters an integer number, it is possible to approximate the 
 
 ### Ex 4.2
 
-*Here the text of the first exercise.*
+*For a sequence of observations of a binary random variable, you observe the geometric random variable (Section 2.2.2) outcome of the first success on observation number* $y = 3$*. Find and plot the likelihood function.*
 
 **Solution**
 
@@ -89,11 +89,11 @@ Let's first remind the geometric distribution: $$ f(y;\pi)=(1-\pi)^{y-1}\pi$$
 
 -   To find a sufficient statistic for the independent set $y_1,\dots,y_n$ from a geometric distribution we first need to write the likelihood function $L(\pi)$ that is:
 $$ L(\pi) = \prod_{i=1}^n (1-\pi)^{y_i-1}\pi =\pi^n\prod_{i=1}^n(1-\pi)^{y_i-1}=\left(\frac{\pi}{1-\pi}\right)^n\prod_{i=1}^n(1-\pi)^{y_i}=\left(\frac{\pi}{1-\pi}\right)^n(1-\pi)^{\sum_i^ny_i}$$
-Hence the log likelihood $\ell(\pi)$ is:
-$$ \ell(\pi)=\log L(\pi)=n[\log\pi-\log(1-\pi)]+\log(1-\pi)\sum_i^ny_i$$
-Since we can write it as a factorized function of type $g[T(\mathbf{y});\pi]$ where $T(\mathbf{y})=\sum_i^ny_i$ and $\ell(\pi)$ depends on the data $\mathbf{y}$ only through this function that comprehends the entire data, and not single observations, we can say that $T(\mathbf{y})=\sum_i^ny_i$ is a sufficient statistic.
+Since we can write it as a factorized function of type $g[T(\mathbf{y});\pi]$ where $T(\mathbf{y})=\sum_i^ny_i$ and $L(\pi)$ depends on the data $\mathbf{y}$ only through this function that comprehends the entire data, and not single observations, we can say that $T(\mathbf{y})=\sum_i^ny_i$ is a sufficient statistic.
 
--   To find an ML estimator for $\pi$ we have to find a value of $\pi$ that maximize $\ell(\pi)$. So we can find the value of $\pi$ for which the derivative of $\ell$ is null:
+-   To find an ML estimator for $\pi$ we have to find a value of $\pi$ that maximize $\ell(\pi)$. First of all the log likelihood $\ell(\pi)$ is:
+$$ \ell(\pi)=\log L(\pi)=n[\log\pi-\log(1-\pi)]+\log(1-\pi)\sum_i^ny_i$$
+So to find the ML estimator we shall find the value of $\pi$ for which the derivative of $\ell$ is null:
 $$ \frac{\text{d}}{\text{d}\pi}\ell(\pi)=n\left(\frac{1}{\pi}+\frac{1}{1-\pi}\right) -\frac{1}{1-\pi}\sum_i^ny_i=0 $$
 Hence: $$ \frac1n\sum_i^ny_i=\frac{1-\pi+\pi}{\pi}\implies\frac1\pi=\frac1n\sum_i^ny_i$$
 Thus we find the ML estimator for $\pi$: $$ \hat\pi=\frac{n}{\sum_i^ny_i}$$
