--- a/GroupA_HM2.Rmd
+++ b/GroupA_HM2.Rmd
@@ -20,8 +20,60 @@ knitr::opts_chunk$set(echo = TRUE)
 
 **Solution**
 
-Add comments to the solution.
+```{r, include=FALSE}
+library(tidyverse)
+```
 
+In this exercise, we have decided to simulate random samples from a Normal distribution, with $\mu = 2$ and $\sigma^2 = 1$. We will run eight different experiments, with respectively, 20 samples, 30, 100, 500, $10^3$, $10^4$,$10^5$ and $10^6$.
+
+```{r}
+n1 <- 20
+n2 <- 30
+n3 <- 100
+n4 <- 500
+n5 <- 1000
+n6 <- 10000
+n7 <- 100000
+n8 <- 1000000
+
+samples_n1 <- rnorm(n1, 2, 1)
+samples_n2 <- rnorm(n2, 2, 1)
+samples_n3 <- rnorm(n3, 2, 1)
+samples_n4 <- rnorm(n4, 2, 1)
+samples_n5 <- rnorm(n5, 2, 1)
+samples_n6 <- rnorm(n6, 2, 1)
+samples_n7 <- rnorm(n7, 2, 1)
+samples_n8 <- rnorm(n8, 2, 1)
+```
+
+
+
+```{r}
+ggplot()+
+  geom_density(aes(x = samples_n1, colour = "n = 20") )+
+  geom_density(aes(x = samples_n2, colour = "n = 30") )+
+  labs(title = "Small sample size, n = 20 & n = 30")+
+  xlab("X")+
+  ylab("density")
+
+ggplot()+
+  geom_density(aes(x = samples_n3, colour = "n = 100") )+
+  geom_density(aes(x = samples_n4, colour = "n = 500") )+
+  labs(title = "Medium sample size, n = 100 & n = 500")+
+  xlab("X")+
+  ylab("density")
+
+ggplot()+
+  geom_density(aes(x = samples_n5, colour = "n = 10^3") )+
+  geom_density(aes(x = samples_n6, colour = "n = 10^4") )+
+  geom_density(aes(x = samples_n7, colour = "n = 10^5") )+
+  geom_density(aes(x = samples_n8, colour = "n = 10^6") )+
+  labs(title = "Very large sample size, n >= 1000")+
+  xlab("X")+
+  ylab("density")
+```
+
+From the three density plots above it is possible to notice the effect of sample size. In particular, comparing the "Small sample size, n = 20 & n = 30" with "Medium sample size, n = 100 & n = 500" plot it is possible to notice that increasing $n$, the probability distributions' plots of normal random samples takes on the characteristics of a Gaussian distribution. When $n$ is set to be equal or greater than $1000$, then the probability distributions' plots of normal random samples are perfectly normal.
 ### Ex 3.18
 
 *Sunshine City, which attracts primarily retired people, has 90,000 residents with a mean age of 72 years and a standard deviation of 12 years. The age distribution is skewed to the left. A random sample of 100 residents of Sunshine City has* $\bar{y}=70$ *and* $s=11$.
@@ -75,7 +127,51 @@ Add comments to the solution.
 
 **Solution**
 
-Add comments to the solution.
+```{r}
+Student <- read.table("https://stat4ds.rwth-aachen.de/data/Students.dat", header=TRUE)
+Student$life <- as.factor(Student$life)
+```
+
+
+Since, it is asked to estimate the proportion of students who believe in life after death, we assume students undecided as students who do not believe.
+
+```{r}
+levels(Student$life) <- c(1, 0, 0)
+Student$life <- as.numeric(Student$life)
+```
+
+
+```{r}
+length(Student$life)
+```
+
+The number of observations in the dataset is 60.
+
+ML theory shows that the log-likelihood function of a binomial distribution is maximized at $\hat\pi = \frac{\sum{y_i}}{n}$, so, in this case, it is the proportion of students who belives in life after death.
+
+```{r}
+mle_pi <- sum(Student$life == 1)/length(Student$life)
+mle_pi
+```
+
+
+The MLE estimate is 0.516.
+
+The Wald confidence interval, at 95% of significance level is: $\hat\pi \pm z_{\frac{\alpha=0.05}{2}}\sqrt{\frac{\hat\pi(1-\hat\pi)}{n}}$.
+
+```{r}
+quant_z <- qnorm(0.025,mean=0,sd=1)
+lower_b <- mle_pi - ((mle_pi*(1-mle_pi))/length(Student$life))**0.5
+upper_b <- mle_pi + ((mle_pi*(1-mle_pi))/length(Student$life))**0.5
+lower_b
+```
+
+
+```{r}
+upper_b
+```
+
+The Wald confidence interval is $ \hat\pi \in [0.4521 ; 0.5811]$.
 
 ### Ex 4.38
 
@@ -393,7 +489,53 @@ As it's possible to see on the qq-plot for the Gaussian model on the left, the f
 
 **Solution**
 
-Add comments to the solution.
+Let's define the function to compute the standard error for the estimate of proportion:
+
+```{r}
+se_prop <- function(prop, len_n)  {
+  val <- (((prop)*(1-prop))/len_n)**0.5
+  return(val)
+}
+```
+
+
+Let's understand what happens in the following example:
+
+```{r}
+quant_zz <- qnorm(0.975,mean=0,sd=1)
+quant_zz*se_prop(0.5,20)
+1/(20**0.5)
+```
+
+Here, $\sqrt{1/20}$ is approximately the same value of $z_{1-\frac{\alpha}{2}}\sqrt{\frac{\hat\pi(1-\hat\pi)}{n}}$.
+
+Looking another example:
+
+```{r}
+quant_zz*se_prop(0.5,60)
+1/(60**0.5)
+```
+
+
+This happens because $z_{0.975} = 1.96$, which is approximately 2.
+
+If $\pi = 0.5$, then $\sqrt{\frac{\pi(1-\pi)}{n}} = \frac{\pi}{\sqrt{n}}$, so $z_{0.975}\frac{\pi}{\sqrt{n}} = 2\frac{0.5}{\sqrt{n}} = \frac{1}{\sqrt{n}}$. This $\frac{1}{\sqrt{n}}$ is called margin of errors. In particular, this is the margin of errors at 95% of confidence.
+
+Similarly, it is approximately the same if $\pi$ is not 0.5, because $\sqrt{\pi(1-\pi)}$ is approximately 0.5.
+
+```{r}
+quant_zz*se_prop(0.7,60)
+1/(60**0.5)
+```
+
+
+When designing an experiment, in this case the estimation of class's proportion in a population, it is possible that the researchers defined the significance level a priori. Also, it can be defined the margin of error a priori. In this way it is possible to define in advance the necessary sample size, $n$. When doing this, if there is no prior knowledge about teh proportion to estimate, is is possible to set $\hat\pi = 0.5$, since it is the most non informative choice.
+
+Let's $M = z_{1-\frac{\alpha}{2}}\sqrt{\frac{\hat\pi(1-\hat\pi)}{n}}$. From this equation it is possible to define the sample size as $n = \frac{{z_{1-\frac{\alpha}{2}}}^2}{M^2}\hat\pi(1-\hat\pi)$.
+
+Then, as shown before, $z_{0.975} = 2$ approximately, so $z_{0.975}^2 = 4$. The $\hat\pi(1-\hat\pi)$ is $0.25$. 
+
+So, $n = \frac{1}{M^2}$ approximately.
 
 ## FSDS - Chapter 5
 
