--- a/GroupA_HM2.Rmd
+++ b/GroupA_HM2.Rmd
@@ -120,7 +120,31 @@ Being the number of voters an integer number, it is possible to approximate the 
 
 **Solution**
 
-Add comments to the solution.
+```{r pressure, echo=FALSE}
+# Define a range of p values, where pv are a range from 0.01 to 0.99.
+p_values <- seq(0.01, 0.99, by = 0.01)
+
+# Calculate the likelihood for each p value
+likelihood <- (1 - p_values)^2 * p_values
+
+# Plot the likelihood function
+plot(p_values, likelihood, type = "l", col = "red", xlab = "pv", ylab = "Likelihood",
+     main = "Likelihood Function")
+
+#results:
+##we have y=3, the prob is given by: P(Y=3)=(1−p)^2⋅p
+#we need to take pv as the estimated parameter
+##the likelihood function is the function l(θ) = f(y;θ) of θ
+```
+
+In this exercise the first success has been observed after three samples. So, we are in a condition like: $P(Y=k) = (1-p)^{k-1}(p) \rightarrow P(Y=3) = (1-p)^2(p)$, where $p \in [0;1]$ is the success parameter.
+
+The likelihood function of a Geometric distribution, represented in the above plot, has the following form:
+
+$$L(p | \vec{y}) = \prod_{i = 1}^{n} f_i(y) = \prod_{i = 1}^{n} (1-p)^{y_i-1}p = ((1-p)^{\sum_{i = 1}^{n} y_i - n})(p^n)$$
+
+The $MLE(p) = \frac{1}{\overline{y}}$.
+
 
 ### Ex 4.4
 
@@ -569,7 +593,55 @@ So, $n = \frac{1}{M^2}$ approximately.
 
 **Solution**
 
-Add comments to the solution.
+Let $u=1200$ the number of Floridians which answered the poll, $n_1=624$ the number of people who voted for raising the taxes, which corresponds to the $\pi = 52\%$ and $n_2=576$ those who voted for reducing the services, $1-\pi = 48\%$.
+
+The two hypothesis are: 
+
+$$ \begin{cases}H_0 : \pi=0.50 \\
+H_\alpha:\pi\neq 0.50
+\end{cases} $$
+
+Where $H_0$ is the null hypothesis, or status quo, so the hypothesis we'd like to verify, and $H_\alpha$ is the alternative hypothesis.
+
+Since $n$ is a large number we can use the normal distribution, and we use the two tailed test because we don't know which direction the distribution takes.
+
+```{r}
+n <- 1200
+n1 <- 624
+n2 <- n - n1
+p <- n1/n
+p2 <- 1-p
+p0 <- 0.5
+#computing std error
+se0 <- sqrt((p0*(1-p0))/n)
+#computing test statistic
+Z <- (p-p0)/se0
+
+Z
+
+pv <- 2*pnorm(Z, lower.tail =  F)
+
+pv
+
+prop.test(n1, n, p=0.50, alt = "two.sided", conf.level = 0.95, correct = F)
+```
+
+
+We have also done the hypothesis testing using formulas and probability tables rather than using R libraries. So:
+$$ z=\frac{\hat{p}-r_0}{\sqrt{\frac{r_0(1-r_0)}{n}}}$$
+
+Where $\hat{p}$ is the proportion: $624/1200=0.52$. Hence we can compute this quantity:
+$$ z=\frac{0.52-0.50}{\sqrt{\frac{0.50(1-0.50)}{1200}}}=1.4184 $$
+
+From the normal quantile tables we can get the p-value:
+$$ p = F(z<-1,4184)+F(z>-1,4184)=0.0778+0.0778=0.1556$$
+
+
+P-value for testing $H_0: \pi = 0.50$ against $H_{\alpha}: \pi \neq 0.50$ is the two-tail probability of a test statistic at least as extreme as the observed $z = 1.4184$, which is $2(0.0778) = 0.1556$.
+
+The difference in the two p-values is due to numerical approximation done by R.
+
+We can conclude that the p-value obtained is greater than 0.1, which corresponds to a significance level of $10 \%$, which means that there are no marginal evidence to reject the $H_0$.
 
 ### Ex 5.12
 
