--- a/GroupA_HM2.Rmd
+++ b/GroupA_HM2.Rmd
@@ -24,6 +24,12 @@ knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 ```
 
+The law of large numbers states that, given a sequence $X_1,X_2,\dots,X_n$ of i.i.d. random variables with $\mathbb{E}[X_i]=\mu$ and $var(x_i)=\sigma^2$, than, for any $\epsilon >0$ we have that:
+$$
+\lim_{n \to \infty} P\left( |\bar{X}_n - \mu | \geq \epsilon \right) = 0
+$$
+Where $\bar{X}_n=\frac{1}{n} \sum_{i=1}^n X_i$ is the sample mean.
+
 In this exercise, we have decided to simulate random samples from a Normal distribution, with $\mu = 2$ and $\sigma^2 = 1$. We will run eight different experiments, with respectively, 20 samples, 30, 100, 500, $10^3$, $10^4$,$10^5$ and $10^6$.
 
 ```{r}
@@ -120,31 +126,35 @@ Being the number of voters an integer number, it is possible to approximate the 
 
 **Solution**
 
-```{r pressure, echo=FALSE}
-# Define a range of p values, where pv are a range from 0.01 to 0.99.
+The *pmf* for the geometric distribution with parameter $\pi \in [0,1]$ is given by
+$$
+P(Y=y)=f(Y)=(1-\pi)^{Y-1}\pi
+$$
+In general, the likelihood function for a geometric distribution with parameter $\pi$ is obtained as
+$$
+L(\pi | \mathbf{y}) = \prod_{i = 1}^{n} f_i(y_i) = \prod_{i = 1}^{n} (1-\pi)^{y_i-1}\pi = \left[(1-\pi)^{\sum_{i = 1}^{n} y_i - n}\right](\pi^n)
+$$
+
+In our case, since we only have one observation, that is $y=3$, the Likelihood function simplifies down to:
+$$
+L(\pi | y) = (1-\pi)^2 \pi
+$$
+
+It is possible to plot this function in R by simply defining a sequence of values for $\pi$ in its range $[0,1]$ and calculating the relative values of the Likelihood function as done below.
+
+```{r}
+# Define a range of pi values, where pv is a sequence from 0.01 to 0.99.
 p_values <- seq(0.01, 0.99, by = 0.01)
 
-# Calculate the likelihood for each p value
+# Calculate the likelihood for each pi value
 likelihood <- (1 - p_values)^2 * p_values
 
 # Plot the likelihood function
-plot(p_values, likelihood, type = "l", col = "red", xlab = "pv", ylab = "Likelihood",
+plot(p_values, likelihood, type = "l", col = "red", 
+     xlab = expression(paste(pi)), 
+     ylab = expression(paste("L(",pi,",y=3)")),
      main = "Likelihood Function")
-
-#results:
-##we have y=3, the prob is given by: P(Y=3)=(1−p)^2⋅p
-#we need to take pv as the estimated parameter
-##the likelihood function is the function l(θ) = f(y;θ) of θ
 ```
-
-In this exercise the first success has been observed after three samples. So, we are in a condition like: $P(Y=k) = (1-p)^{k-1}(p) \rightarrow P(Y=3) = (1-p)^2(p)$, where $p \in [0;1]$ is the success parameter.
-
-The likelihood function of a Geometric distribution, represented in the above plot, has the following form:
-
-$$L(p | \vec{y}) = \prod_{i = 1}^{n} f_i(y) = \prod_{i = 1}^{n} (1-p)^{y_i-1}p = ((1-p)^{\sum_{i = 1}^{n} y_i - n})(p^n)$$
-
-The $MLE(p) = \frac{1}{\overline{y}}$.
-
 
 ### Ex 4.4
 
@@ -157,8 +167,13 @@ Student <- read.table("https://stat4ds.rwth-aachen.de/data/Students.dat", header
 Student$life <- as.factor(Student$life)
 ```
 
+Upon an initial analysis of the ``Students`` dataset we can see that the possible answers for the question related to the belief of life after death were 3:
+```{r}
+summary(Student$life)
+```
+where '1' stands for 'yes', '2' for 'no' while '3' for 'undecided'.
 
-Since, it is asked to estimate the proportion of students who believe in life after death, we assume students undecided as students who do not believe.
+Since, it is asked to estimate the proportion of students who believe in life after death, we assume students undecided as students who do not believe. To achieved this the corresponding levels were changes as follows:
 
 ```{r}
 levels(Student$life) <- c(1, 0, 0)
@@ -170,7 +185,7 @@ Student$life <- as.numeric(Student$life)
 length(Student$life)
 ```
 
-The number of observations in the dataset is 60.
+The total number of observations in the dataset is 60.
 
 ML theory shows that the log-likelihood function of a binomial distribution is maximized at $\hat\pi = \frac{\sum{y_i}}{n}$, so, in this case, it is the proportion of students who belives in life after death.
 
@@ -180,23 +195,18 @@ mle_pi
 ```
 
 
-The MLE estimate is 0.516.
+The MLE estimate is therefore $0.516$.
 
-The Wald confidence interval, at 95% of significance level is: $\hat\pi \pm z_{\frac{\alpha=0.05}{2}}\sqrt{\frac{\hat\pi(1-\hat\pi)}{n}}$.
+The Wald confidence interval, at 95% of significance level is given by $\hat\pi \pm z_{\frac{\alpha=0.05}{2}}\sqrt{\frac{\hat\pi(1-\hat\pi)}{n}}$.
 
 ```{r}
 quant_z <- qnorm(0.975,mean=0,sd=1)
 lower_b <- mle_pi - quant_z*sqrt((mle_pi*(1-mle_pi))/length(Student$life))
 upper_b <- mle_pi + quant_z*sqrt((mle_pi*(1-mle_pi))/length(Student$life))
-lower_b
+cat("Wald confidence interval: [",lower_b,",", upper_b,"]")
 ```
 
-
-```{r}
-upper_b
-```
-
-The Wald confidence interval is $\hat\pi \in [0.3902 ; 0.6431]$.
+In conclusion, the Wald confidence interval is therefore $[0.3902 ; 0.6431]$.
 
 ### Ex 4.38
 
@@ -513,7 +523,7 @@ qqPlot(houses$price, dist="lnorm", pch=20, main="QQ-Plot Log-Normal Fit",
 As it's possible to see on the qq-plot for the Gaussian model on the left, the fact that the last points detach form the line suggests that there is not great agreement between the measured data and the theoretical Gaussian distribution and also indicates that the distribution of the data is skewed to the right as we've already deduced from the previous histogram.
 
 
-To complete our analysis, we have decided to perform the Kolmogorov-Smirnov test, a non parametric test used for goodness-of-fit. In particular, we will run two different one-sample KS test, to compare the data from the dataset with a reference probability distribution, in this case the Gaussian and LogNormal distributions.
+To complete our analysis, we have decided to perform the Kolmogorov-Smirnov test, a non parametric test used for goodness-of-fit. In particular, we will run two different one-sample KS test, to compare the data from the dataset with a reference probability distribution, in this case the Gaussian and Log-Normal distributions.
 
 ```{r, warning=FALSE}
 ks.test(houses$price, "pnorm", mean = 233, sd = 151 )
@@ -527,7 +537,7 @@ ks.test(houses$price, "plnorm", meanlog = 5.2913, sdlog = 0.5591 )
 ```
 
 
-Considering a significance level of $5\%$, the p-value of this test is much greater than 0.05, so the data does provide enough evidence to accept $H_0$, so there is evidence that the prices are distributed as a LogNormal distribution, with $\mu_{log} = 5.2913$ and $\sigma_{log} = 0.5591$.
+Considering a significance level of $5\%$, the p-value of this test is much greater than 0.05, so the data does provide enough evidence to accept $H_0$, so there is evidence that the prices are distributed as a Log-Normal distribution, with $\mu_{log} = 5.2913$ and $\sigma_{log} = 0.5591$.
 
 
 
@@ -593,55 +603,50 @@ So, $n = \frac{1}{M^2}$ approximately.
 
 **Solution**
 
-Let $u=1200$ the number of Floridians which answered the poll, $n_1=624$ the number of people who voted for raising the taxes, which corresponds to the $\pi = 52\%$ and $n_2=576$ those who voted for reducing the services, $1-\pi = 48\%$.
-
+Let $n=1200$ the number of Floridians which answered the poll, $n_1=624$ the number of people who voted for raising the taxes, which corresponds to the $\hat\pi = 52\%$ and $n_2=576$ those who voted for reducing the services, $1-\hat\pi = 48\%$.
+Therefore the parameter $\pi$ corresponds to the proportion of people wo wuold like t raise taxes.
 The two hypothesis are: 
-
-$$ \begin{cases}H_0 : \pi=0.50 \\
+$$
+\begin{cases}H_0 : \pi= \pi_0 = 0.50 \\
 H_\alpha:\pi\neq 0.50
-\end{cases} $$
+\end{cases}
+$$
 
 Where $H_0$ is the null hypothesis, or status quo, so the hypothesis we'd like to verify, and $H_\alpha$ is the alternative hypothesis.
+The sampling size $n$ is sufficiently large so that we can assume the sampling distribution of $\hat\pi$ being normal under $H_0$ and we used the two tailed test because we don't know which direction the distribution takes.
 
-Since $n$ is a large number we can use the normal distribution, and we use the two tailed test because we don't know which direction the distribution takes.
+The test statistic used to conduct the test is 
+$$
+z(\pi) = \frac{\pi-\pi_0}{SE(\pi_0)} = \frac{\pi-\pi_0}{\sqrt{\frac{\pi_0(1-\pi_0)}{n}}}
+$$
+
+First of all we calculated the value of the test statistic and the p-value obtained with the give observations:
 
 ```{r}
 n <- 1200
 n1 <- 624
-n2 <- n - n1
 p <- n1/n
-p2 <- 1-p
 p0 <- 0.5
+
 #computing std error
 se0 <- sqrt((p0*(1-p0))/n)
+
 #computing test statistic
 Z <- (p-p0)/se0
-
-Z
-
 pv <- 2*pnorm(Z, lower.tail =  F)
-
-pv
-
-prop.test(n1, n, p=0.50, alt = "two.sided", conf.level = 0.95, correct = F)
+cat(" Value of the test statistic: ", Z, "\n Value of the p-value: ", pv)
 ```
 
+Then, the ``prop.test()`` function has been used to conduct the test in R.
+```{r}
+prop.test(x=624, n=1200, p=0.5, alt="two.sided", conf.level = 0.95, correct=FALSE)
+```
 
-We have also done the hypothesis testing using formulas and probability tables rather than using R libraries. So:
-$$ z=\frac{\hat{p}-r_0}{\sqrt{\frac{r_0(1-r_0)}{n}}}$$
-
-Where $\hat{p}$ is the proportion: $624/1200=0.52$. Hence we can compute this quantity:
-$$ z=\frac{0.52-0.50}{\sqrt{\frac{0.50(1-0.50)}{1200}}}=1.4184 $$
-
-From the normal quantile tables we can get the p-value:
-$$ p = F(z<-1,4184)+F(z>-1,4184)=0.0778+0.0778=0.1556$$
-
-
-P-value for testing $H_0: \pi = 0.50$ against $H_{\alpha}: \pi \neq 0.50$ is the two-tail probability of a test statistic at least as extreme as the observed $z = 1.4184$, which is $2(0.0778) = 0.1556$.
-
-The difference in the two p-values is due to numerical approximation done by R.
-
-We can conclude that the p-value obtained is greater than 0.1, which corresponds to a significance level of $10 \%$, which means that there are no marginal evidence to reject the $H_0$.
+To double check the results, we have also done the hypothesis test *"by hand"* using probability tables rather than using R libraries.
+In this case the value we obtained for the test statistic is $z(\hat\pi)=1.4284$ and from the normal quantile tables we got the p-value corresponding to a significance level of $\alpha = 0.05$:
+$$ p = F(z<-1.4184)+F(z>+1.4184) \approx 0.0778+0.0778=0.1556$$
+The p-value obtained in R and the one we computed *"by hand"* differ slightly due to different approximation adopted, but are both not very small, so there is not a strong evidence against the null hypothesis $H_0: \pi= \pi_0 = 0.50$.
+We can therefore conclude that it's plausible that the true value of the parameter is $\pi=0.5$. In other words, there is insufficient evidence to determine whether the majority of the people wants to raise taxes ($\pi>0.5$) or not ($\pi<0.5$).
 
 ### Ex 5.12
 
@@ -666,16 +671,16 @@ s2 <- 8.01
 n2 <- 50
 
 degf = n1+n2-2
-
 s = sqrt(((n1-1)*s1^2+(n2-1)*s2^2)/(degf))
 se = s * sqrt(1/n1+1/n2)
-
 t = (y1-y2)/se
-
-se; t; degf
-
 pvalue = 2*pt(q= t, df = degf, lower.tail = T)
-pvalue
+
+
+cat(" Standard error: ", se,
+    "\n Degrees of freedom: ", degf,
+    "\n Value of the test statistic: ", t, 
+    "\n Value of the p-value: ", pvalue)
 ```
 
 We can estimate the p-value as $p=0.02$. This low value suggests that we should reject $H_0$ hence $\mu_1\neq\mu_2$ and the mean sales between the two menus are different.
